@startuml

title __KUR's Class Diagram__\n


    namespace om.example.kur {
      class com.example.kur.DatabaseManager {
          {static} - DB_PASSWORD : String
          {static} - DB_URL : String
          {static} - DB_USERNAME : String
          - connection : Connection
          + DatabaseManager()
          + closeConnection()
          + getConnection()
      }
    }



    namespace om.example.kur {
      class com.example.kur.HelloApplication {
          {static} + main()
          + start()
      }
    }

  


    namespace om.example.kur {
      class com.example.kur.StudentTask {
          - answerFile : File
          - textAnswer : String
          + StudentTask()
          + getAnswerFile()
          + getTextAnswer()
          + setAnswerFile()
          + setTextAnswer()
      }
    }

  


    namespace om.example.kur {
      class com.example.kur.Task {
          - answerFile : File
          - comment : String
          - file : File
          - id : int
          - name : String
          - status : String
          - studentAnswerId : int
          - textAnswer : String
          + Task()
          + Task()
          + getAnswerFile()
          + getComment()
          + getFile()
          + getId()
          + getName()
          + getStatus()
          + getStudentAnswerId()
          + getTextAnswer()
          + setAnswerFile()
          + setComment()
          + setFile()
          + setId()
          + setName()
          + setStatus()
          + setStudentAnswerId()
          + setTextAnswer()
      }
    }

  

  com.example.kur.HelloApplication -up-|> javafx.application.Application
  com.example.kur.StudentTask -up-|> com.example.kur.Task


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
